--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <h2>CONTATO</h2>
       <div class="contato-bloco">
       <div class="contato-coluna">
-        <p><a href="tel:+5598988130202" target="_blank">Telefone</a></p>
+        <p><a href="https://wa.me/5598988130202" target="_blank" rel="noopener noreferrer">Telefone</a></p>
         <p><a href="mailto:zaidangabrielle@hotmail.com" target="_blank">Email</a></p>
       </div>
       <div class="contato-coluna">
@@ -125,3 +125,4 @@
     </footer>
   </body>
 </html>
+
